# api/swagger.yaml
@@ -255,22 +255,15 @@ paths:
         404:
           description: "unauthorized"
       x-swagger-router-controller: "User"
-  /user/{userId}:
+  /findUser:
     get:
       tags:
       - "user"
-      summary: "Find user by ID"
-      description: "Returns a user"
-      operationId: "getUserById"
+      summary: "Find user"
+      description: "Returns a user if it is logged"
+      operationId: "getUser"
       produces:
       - "application/json"
-      parameters:
-      - name: "userId"
-        in: "path"
-        description: "ID of user to return"
-        required: true
-        type: "integer"
-        format: "int64"
       responses:
         200:
           description: "successful operation"
